# TMAP

./: .gitmodules  AUTHORS  COPYING  ChangeLog  INSTALL  LICENSE  Makefile.am  NEWS  README  README.md  autogen.sh  configure  configure.ac
config/: compile
doc/: Makefile  fmap-book.tex  tmap-book.bib  tmap-book.tex
scripts/: sam2hpstats.py  sam_diff.py  tmap_submit.py  variant_calling_metrics.py
scripts/debian/: debian_mod_files.pl  make_deb.sh
scripts/doxygen/: doxygen_config.ini  run_doxygen.sh
scripts/galaxy/: README.md  tmap_index.loc.sample  tmap_wrapper.py  tmap_wrapper.xml
scripts/util/: resplit_fastq.py  sam2aln.py  sam2flows.py  sam2hpstats.py  sam_diff.py  variant_calling_metrics.py
src/: Makefile.am  fmap_alloc.c  fmap_alloc.h  fmap_bwt.c  fmap_bwt.h  fmap_bwt_gen.c  fmap_bwt_gen.h  fmap_bwt_match.c  fmap_debug_exact.c  fmap_debug_exact.h  fmap_debug_hash.c  fmap_debug_hash.h  fmap_definitions.c  fmap_definitions.h  fmap_error.c  fmap_error.h  fmap_exact.c  fmap_exact.h  fmap_index.c  fmap_index.h  fmap_io.c  fmap_io.h  fmap_main.c  fmap_main.h  fmap_progress.c  fmap_progress.h  fmap_refseq.c  fmap_refseq.h  fmap_sa.c  fmap_sa.h  fmap_seq.c  fmap_seq.h  main.c  tmap_main.c  tmap_main.h
src/debug/: fmap_debug_exact.c  fmap_debug_exact.h  tmap_debug_exact.c  tmap_debug_exact.h
src/index/: fmap_bwt.c  fmap_bwt.h  fmap_bwt_gen.c  fmap_bwt_gen.h  fmap_bwt_match.c  fmap_bwt_match.h  fmap_bwtl.c  fmap_bwtl.h  fmap_index.c  fmap_index.h  fmap_refseq.c  fmap_refseq.h  fmap_sa.c  fmap_sa.h  tmap_bwt.c  tmap_bwt.h  tmap_bwt_aux.c  tmap_bwt_aux.h  tmap_bwt_check.c  tmap_bwt_check.h  tmap_bwt_compare.c  tmap_bwt_compare.h  tmap_bwt_gen.c  tmap_bwt_gen.h  tmap_bwt_match.c  tmap_bwt_match.h  tmap_bwt_match_hash.c  tmap_bwt_match_hash.h  tmap_bwt_smem.c  tmap_bwt_smem.h  tmap_bwtl.c  tmap_bwtl.h  tmap_index.c  tmap_index.h  tmap_index_size.c  tmap_index_size.h  tmap_index_speed.c  tmap_index_speed.h  tmap_refseq.c  tmap_refseq.h  (+4 more)
src/io/: fmap_file.c  fmap_file.h  fmap_fq_io.c  fmap_fq_io.h  fmap_io.c  fmap_seq.c  fmap_seq.h  fmap_seq_io.c  fmap_seq_io.h  fmap_sff_io.c  fmap_sff_io.h  tmap_file.c  tmap_file.h  tmap_fq_io.c  tmap_fq_io.h  tmap_sam_io.c  tmap_sam_io.h  tmap_seq_io.c  tmap_seq_io.h  tmap_seqs_io.c  tmap_seqs_io.h  tmap_sff_io.c  tmap_sff_io.h
src/map/: fmap_map1.c  fmap_map1.h  fmap_map1_aux.c  fmap_map1_aux.h  fmap_map2.c  fmap_map2.h  fmap_map2_aux.c  fmap_map2_aux.h  fmap_map2_chain.c  fmap_map2_chain.h  fmap_map2_core.c  fmap_map2_core.h  fmap_map2_mempool.c  fmap_map2_mempool.h  fmap_map3.c  fmap_map3.h  fmap_map3_aux.c  fmap_map3_aux.h  fmap_map_all.c  fmap_map_all.h  fmap_map_util.c  fmap_map_util.h  tmap_map1.c  tmap_map1.h  tmap_map1_aux.c  tmap_map1_aux.h  tmap_map2.c  tmap_map2.h  tmap_map2_aux.c  tmap_map2_aux.h  tmap_map2_chain.c  tmap_map2_chain.h  tmap_map2_core.c  tmap_map2_core.h  tmap_map2_mempool.c  tmap_map2_mempool.h  tmap_map3.c  tmap_map3.h  tmap_map3_aux.c  tmap_map3_aux.h  (+14 more)
src/map/map1/: tmap_map1.c  tmap_map1.h  tmap_map1_aux.c  tmap_map1_aux.h
src/map/map2/: tmap_map2.c  tmap_map2.h  tmap_map2_aux.c  tmap_map2_aux.h  tmap_map2_chain.c  tmap_map2_chain.h  tmap_map2_core.c  tmap_map2_core.h  tmap_map2_mempool.c  tmap_map2_mempool.h
src/map/map3/: tmap_map3.c  tmap_map3.h  tmap_map3_aux.c  tmap_map3_aux.h
src/map/map4/: tmap_map4.c  tmap_map4.h  tmap_map4_aux.c  tmap_map4_aux.h
src/map/mapall/: tmap_map_all.c
src/map/mapvsw/: tmap_map_vsw.c  tmap_map_vsw.h
src/map/pairing/: tmap_map_pairing.c  tmap_map_pairing.h
src/map/util/: tmap_map_opt.c  tmap_map_opt.h  tmap_map_stats.c  tmap_map_stats.h  tmap_map_util.c  tmap_map_util.h
src/misc/: fmap_sam2fs.c  fmap_sam2fs.h  fmap_sam2fs_aux.c  fmap_sam2fs_aux.h  tmap_mappability.c  tmap_sam2fs.c  tmap_sam2fs.h  tmap_sam2fs_aux.c  tmap_sam2fs_aux.h
src/sam2fs/: tmap_sam2fs.c  tmap_sam2fs.h  tmap_sam2fs_aux.c  tmap_sam2fs_aux.h
src/search/: fmap_map1.c  fmap_map1.h  fmap_map1_aux.c  fmap_map1_aux.h
src/seq/: fmap_fq.c  fmap_fq.h  fmap_seq.c  fmap_seq.h  fmap_sff.c  fmap_sff.h  tmap_fq.c  tmap_fq.h  tmap_sam.c  tmap_sam.h  tmap_seq.c  tmap_seq.h  tmap_seqs.c  tmap_seqs.h  tmap_sff.c  tmap_sff.h
src/server/: fmap_server.c  fmap_server.h  fmap_shm.c  fmap_shm.h  tmap_server.c  tmap_server.h  tmap_shm.c  tmap_shm.h
src/sfferr/: fmap_sfferr.c  fmap_sfferr.h  fmap_sfferr_aux.c  fmap_sfferr_aux.h
src/sw/: fmap_fsw.c  fmap_fsw.h  fmap_sw.c  fmap_sw.h  tmap_fsw.c  tmap_fsw.h  tmap_sw.c  tmap_sw.h  tmap_vsw.c  tmap_vsw.h  tmap_vsw16.c  tmap_vsw16.h  tmap_vsw8.c  tmap_vsw8.h  tmap_vsw_bm.c  tmap_vsw_definitions.c  tmap_vsw_definitions.h  tmap_vsw_s0.c  tmap_vsw_s0.h  tmap_vsw_s1.c  tmap_vsw_s1.h  tmap_vsw_s3.c  tmap_vsw_s3.h
src/sw/lib/: AffineSWOptimization.cpp  AffineSWOptimization.h  AffineSWOptimizationHash.cpp  AffineSWOptimizationHash.h  AffineSWOptimizationWrapper.cpp  AffineSWOptimizationWrapper.h  Solution.cpp  Solution.h  Solution1.cpp  Solution1.h  Solution10.cpp  Solution10.h  Solution2.cpp  Solution2.h  Solution3.cpp  Solution3.h  Solution4.cpp  Solution4.h  Solution5.cpp  Solution5.h  Solution6.cpp  Solution6.h  Solution7.cpp  Solution7.h  Solution8.cpp  Solution8.h  Solution9.cpp  Solution9.h  sw-vector.cpp  sw-vector.h  vsw.cpp  vsw.h  vsw16.cpp  vsw16.h
src/util/: fmap_alloc.c  fmap_alloc.h  fmap_definitions.c  fmap_definitions.h  fmap_error.c  fmap_error.h  fmap_fibheap.c  fmap_fibheap.h  fmap_fq.c  fmap_fq.h  fmap_hash.h  fmap_progress.c  fmap_progress.h  fmap_sam.c  fmap_sam.h  fmap_seq.c  fmap_seq.h  fmap_sff.c  fmap_sff.h  fmap_sort.h  fmap_string.c  fmap_string.h  fmap_vec.h  tmap_alloc.c  tmap_alloc.h  tmap_definitions.c  tmap_definitions.h  tmap_error.c  tmap_error.h  tmap_fibheap.c  tmap_fibheap.h  tmap_hash.h  tmap_levenshtein.c  tmap_levenshtein.h  tmap_progress.c  tmap_progress.h  tmap_rand.c  tmap_rand.h  tmap_sam.c  tmap_sam.h  (+10 more)
