bin_PROGRAMS = fmap 

fmap_SOURCES = \
			   fmap_error.h fmap_error.c \
			   fmap_alloc.h fmap_alloc.c \
			   fmap_io.h fmap_io.c \
			   fmap_seq.h fmap_seq.c \
			   fmap_refseq.h fmap_refseq.c \
			   fmap_bwt.h fmap_bwt.c \
			   fmap_bwt_match.h fmap_bwt_match.c \
			   fmap_bwt_gen.h fmap_bwt_gen.c \
			   fmap_sa.c fmap_sa.h \
			   fmap_index.h fmap_index.c \
			   fmap_debug_exact.h fmap_debug_exact.c \
			   fmap_definitions.h fmap_definitions.c \
			   fmap_progress.h fmap_progress.c \
			   main.c

fmap_LDADD = 
